grunt build now works perfectly

--- a/app/less/pages/about/about-header.less
+++ b/app/less/pages/about/about-header.less
@@ -1,6 +1,6 @@
 header.about-header {
 	z-index:-1;
-	background:url(../../images/digitaldepot.jpg);
+	background:url('../images/digitaldepot.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
