--- a/app/less/pages/about/about-team.less
+++ b/app/less/pages/about/about-team.less
@@ -52,7 +52,7 @@ section.team {
 			background-position:center;
 		}
 		.sam-lyons {
-			background-image:url(../../images/sam-lyons.jpg);
+			background-image:url(../images/sam-lyons.jpg);
 		}
 		.marie-therese {
 			background-image:url(http://placehold.it/200x200);
@@ -64,28 +64,28 @@ section.team {
 			background-image:url(http://placehold.it/200x200);
 		}
 		.andre-lacerda {
-			background-image:url(../../images/andre-lacerda.jpg);
+			background-image:url(../images/andre-lacerda.jpg);
 		}
 		.robert-kamenicky {
 			background-image:url(http://placehold.it/200x200);
 		}
 		.aidan-mccarthy {
-			background-image:url(../../images/aidan-mccarthy.jpg);
+			background-image:url(../images/aidan-mccarthy.jpg);
 		}
 		.carol-hevia {
-			background-image:url(../../images/carol-hevia.jpg);
+			background-image:url(../images/carol-hevia.jpg);
 		}
 		.conor-fleming {
-			background-image:url(../../images/conor-fleming.jpg);
+			background-image:url(../images/conor-fleming.jpg);
 		}
 		.emma-carroll {
-			background-image:url(../../images/emma-carroll.jpg);
+			background-image:url(../images/emma-carroll.jpg);
 		}
 		.juliana-scodeler {
-			background-image:url(../../images/juliana-scodeler.jpg);
+			background-image:url(../images/juliana-scodeler.jpg);
 		}
 		.jaroslaw-narkiewicz {
-			background-image:url(../../images/jaroslaw-narkiewicz.jpg);
+			background-image:url(../images/jaroslaw-narkiewicz.jpg);
 		}
 	}
 	.team-member-overlay {
