--- a/app/less/pages/blog/blog-header.less
+++ b/app/less/pages/blog/blog-header.less
@@ -1,6 +1,6 @@
 header.blog-header {
 	z-index:-1;
-	background:url(../../images/blog-header.jpg);
+	background:url(../images/blog-header.jpg);
 	background-size:cover;
 	background-position:center;
 	width:100%;
