--- a/app/less/pages/connect/connect-header.less
+++ b/app/less/pages/connect/connect-header.less
@@ -1,6 +1,6 @@
 header.connect-header {
 	z-index:-1;
-	background:url(../../images/multimeter.jpg);
+	background:url('../images/multimeter.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
