--- a/app/less/pages/home/home-blocks.less
+++ b/app/less/pages/home/home-blocks.less
@@ -89,7 +89,7 @@ section.home-blocks {
 		}
 	}
 	.block-collaboration {
-		background:url('../../images/pen.jpg');
+		background:url('../images/pen.jpg');
 		background-size:cover;
 		background-position:center;
 		width:100%;
