--- a/app/less/pages/home/home-header.less
+++ b/app/less/pages/home/home-header.less
@@ -18,7 +18,7 @@ h2 {
 ////////////
 
 header.home-header {
-	background:url('../../images/bridge.jpg');
+	background:url('../images/bridge.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
