--- a/app/less/pages/services/services-header.less
+++ b/app/less/pages/services/services-header.less
@@ -1,6 +1,6 @@
 header.services-header {
 	z-index:-1;
-	background:url(../../images/meter.jpg);
+	background:url('../images/meter.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
