--- a/app/less/pages/showcase/showcase-blocks.less
+++ b/app/less/pages/showcase/showcase-blocks.less
@@ -1,5 +1,5 @@
 .block-case-studies {
-	background:url('../../images/block-case-studies.jpg');
+	background:url('../images/block-case-studies.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
@@ -24,7 +24,7 @@
 	}
 }
 .block-work {
-	background:url('../../images/block-work.jpg');
+	background:url('../images/block-work.jpg');
 	background-size:cover;
 	background-position:50% 20%;
 	width:100%;
