--- a/app/less/pages/showcase/showcase-case-studies.less
+++ b/app/less/pages/showcase/showcase-case-studies.less
@@ -31,7 +31,7 @@
         background:white;
         border:1px solid @primary-color;
         .cs-box {
-             background: url(../../images/courses-logo.png);
+             background: url('../images/courses-logo.png');
             background-size:contain;
             background-position:center;
             background-repeat:no-repeat;
@@ -43,7 +43,7 @@
         background: white;
         border:1px solid @primary-color;
         .cs-box {
-             background: url(../../images/openfm-logo.png);
+             background: url('../images/openfm-logo.png');
             background-size:contain;
             background-position:center;
             background-repeat:no-repeat;
@@ -55,7 +55,7 @@
         background: white;
         border:1px solid @primary-color;
         .cs-box {
-             background: url(../../images/kcr-logo.png);
+             background: url('../images/kcr-logo.png');
             background-size:contain;
             background-position:center;
             background-repeat:no-repeat;
@@ -67,7 +67,7 @@
         background: white;
         border:1px solid @primary-color;
         .cs-box {
-             background: url(../../images/lucca-logo.png);
+             background: url('../images/lucca-logo.png');
             background-size:contain;
             background-position:center;
             background-repeat:no-repeat;
@@ -271,28 +271,28 @@ section.courses {
                 .column.fourth {
                     &:first-child {
                         .cs-thumb {
-                            background:url(../../images/courses-branding.jpg);
+                            background:url('../images/courses-branding.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(2) {
                         .cs-thumb {
-                            background:url(../../images/courses-webdev.jpg);
+                            background:url('../images/courses-webdev.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(3) {
                         .cs-thumb {
-                            background:url(../../images/courses-pr.jpg);
+                            background:url('../images/courses-pr.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(4) {
                         .cs-thumb {
-                            background:url(../../images/courses-marketing.jpg);
+                            background:url('../images/courses-marketing.jpg');
                             background-size:cover;
                             background-position:center;
                         }
@@ -309,21 +309,21 @@ section.kcrarea {
                 .column.fourth {
                     &:first-child {
                         .cs-thumb {
-                            background:url(../../images/kcr-design.jpg);
+                            background:url('../images/kcr-design.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(2) {
                         .cs-thumb {
-                            background:url(../../images/kcr-webdev.jpg);
+                            background:url('../images/kcr-webdev.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(3) {
                         .cs-thumb {
-                            background:url(../../images/kcr-social.jpg);
+                            background:url('../images/kcr-social.jpg');
                             background-size:cover;
                             background-position:center;
                         }
@@ -340,28 +340,28 @@ section.openfm {
                 .column.fourth {
                     &:first-child {
                         .cs-thumb {
-                            background:url(../../images/openfm-branding.jpg);
+                            background:url('../images/openfm-branding.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(2) {
                         .cs-thumb {
-                            background:url(../../images/openfm-design.jpg);
+                            background:url('../images/openfm-design.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(3) {
                         .cs-thumb {
-                            background:url(../../images/openfm-sponsor.jpg);
+                            background:url('../images/openfm-sponsor.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(4) {
                         .cs-thumb {
-                            background:url(../../images/openfm-webdev.jpg);
+                            background:url('../images/openfm-webdev.jpg');
                             background-size:cover;
                             background-position:center;
                         }
@@ -377,21 +377,21 @@ section.kcrarea {
             li {
                 &:first-child {
                     .cs-thumb {
-                        background:url(../../images/kcr-design.jpg);
+                        background:url('../images/kcr-design.jpg');
                         background-size:cover;
                         background-position:center;
                     }
                 }
                 &:nth-child(2) {
                     .cs-thumb {
-                        background:url(../../images/kcr-webdev.jpg);
+                        background:url('../images/kcr-webdev.jpg');
                         background-size:cover;
                         background-position:center;
                     }
                 }
                 &:nth-child(3) {
                     .cs-thumb {
-                        background:url(../../images/kcr-social.jpg);
+                        background:url('../images/kcr-social.jpg');
                         background-size:cover;
                         background-position:center;
                     }
@@ -407,21 +407,21 @@ section.lucca {
                 .column.fourth {
                     &:first-child {
                         .cs-thumb {
-                            background:url(../../images/lucca-consulting.jpg);
+                            background:url('../images/lucca-consulting.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(2) {
                         .cs-thumb {
-                            background:url(../../images/lucca-cloud.jpg);
+                            background:url('../images/lucca-cloud.jpg');
                             background-size:cover;
                             background-position:center;
                         }
                     }
                     &:nth-child(3) {
                         .cs-thumb {
-                            background:url(../../images/lucca-screencasts.jpg);
+                            background:url('../images/lucca-screencasts.jpg');
                             background-size:cover;
                             background-position:center;
                         }
@@ -459,7 +459,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/courses-branding-half.jpg);
+                        background:url('../images/courses-branding-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -472,7 +472,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/courses-webdev-half.jpg);
+                        background:url('../images/courses-webdev-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -485,7 +485,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/courses-pr-half.jpg);
+                        background:url('../images/courses-pr-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -498,7 +498,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/courses-marketing-half.jpg);
+                        background:url('../images/courses-marketing-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -511,7 +511,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/openfm-branding-half.jpg);
+                        background:url('../images/openfm-branding-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -524,7 +524,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/openfm-design-half.jpg);
+                        background:url('../images/openfm-design-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -537,7 +537,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/openfm-sponsor-half.jpg);
+                        background:url('../images/openfm-sponsor-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -550,7 +550,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/openfm-webdev-half.jpg);
+                        background:url('../images/openfm-webdev-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -563,7 +563,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/kcr-design-half.jpg);
+                        background:url('../images/kcr-design-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -576,7 +576,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/kcr-webdev-half.jpg);
+                        background:url('../images/kcr-webdev-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -589,7 +589,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/kcr-social-half.jpg);
+                        background:url('../images/kcr-social-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -602,7 +602,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/lucca-consulting-half.jpg);
+                        background:url('../images/lucca-consulting-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -615,7 +615,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/lucca-cloud-half.jpg);
+                        background:url('../images/lucca-cloud-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
@@ -628,7 +628,7 @@ div.cs-panel-items {
             & > div {
                 .clearfix {
                     .column.half:nth-child(2) {
-                        background:url(../../images/lucca-screencasts-half.jpg);
+                        background:url('../images/lucca-screencasts-half.jpg');
                         background-size:cover;
                         background-position:center;
                         //width:100%;
