--- a/app/less/pages/showcase/showcase-work.less
+++ b/app/less/pages/showcase/showcase-work.less
@@ -35,28 +35,28 @@
     & > section:first-child {
         top: 0;
         left: 0;
-        background:url(../../images/ely-thumb.jpg);
+        background:url('../images/ely-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(2) {
         top: 0;
         left: 25%;
-        background:url(../../images/diageo-thumb.jpg);
+        background:url('../images/diageo-thumb.jpg');
         background-position:50% 0%;
         background-size:cover;
     }
     & > section:nth-child(3) {
         top: 0;
         left: 50%;
-        background:url(../../images/h2-thumb.jpg);
+        background:url('../images/h2-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(4) {
         top: 0;
         left: 75%;
-        background:url(../../images/dhda-thumb.jpg);
+        background:url('../images/dhda-thumb.jpg');
         background-position:center;
         background-size:cover;
         h3 {
@@ -66,14 +66,14 @@
     & > section:nth-child(5) {
         top: 33.3%;
         left: 0;
-        background:url(../../images/goc-thumb.jpg);
+        background:url('../images/goc-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(6) {
         top: 33.3%;
         left: 25%;
-        background:url(../../images/lincoln-thumb.jpg);
+        background:url('../images/lincoln-thumb.jpg');
         background-position:center;
         background-size:cover;
         p {
@@ -83,7 +83,7 @@
     & > section:nth-child(7) {
         top: 33.3%;
         left: 50%;
-        background:url(../../images/relo-thumb.jpg);
+        background:url('../images/relo-thumb.jpg');
         background-position:center;
         background-size:cover;
         p {
@@ -93,7 +93,7 @@
     & > section:nth-child(8) {
         top: 33.3%;
         left: 75%;
-        background:url(../../images/mutz-thumb.jpg);
+        background:url('../images/mutz-thumb.jpg');
         background-position:center;
         background-size:cover;
         p {
@@ -103,7 +103,7 @@
     & > section:nth-child(9) {
         top: 66.6%;
         left: 0;
-        background:url(../../images/flowers-thumb.jpg);
+        background:url('../images/flowers-thumb.jpg');
         background-position:center;
         background-size:cover;
         p {
@@ -113,21 +113,21 @@
     & > section:nth-child(10) {
         top: 66.6%;
         left: 25%;
-        background:url(../../images/energy-thumb.jpg);
+        background:url('../images/energy-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(11) {
         top: 66.6%;
         left: 50%;
-        background:url(../../images/mactivate-thumb.jpg);
+        background:url('../images/mactivate-thumb.jpg');
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(12) {
         top: 66.6%;
         left: 75%;
-        background:url(../../images/irishtimes-thumb.jpg);
+        background:url('../images/irishtimes-thumb.jpg');
         background-position:center;
         background-size:cover;
         p {
