--- a/app/less/partials/footer.less
+++ b/app/less/partials/footer.less
@@ -1,5 +1,5 @@
 footer {
-	background-image:url(../../images/fuses.jpg);
+	background-image:url('../images/fuses.jpg');
 	background-size:cover;
 	background-position:center;
 	color:white;
