--- a/app/less/pages/home/home-process.less
+++ b/app/less/pages/home/home-process.less
@@ -146,7 +146,7 @@
 
 
 .office-img {
-	background:url('../../images/office.jpg');
+	background:url('../images/office.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
