--- a/app/less/pages/services/services-blocks.less
+++ b/app/less/pages/services/services-blocks.less
@@ -72,27 +72,27 @@ section.services-blocks {
 		}
 	}
 	.block-marketing {
-		background-image:url(../../images/hook.jpg);
+		background-image:url('../images/hook.jpg');
 		background-size:cover;
 		background-position:center;
 	}
 	.block-design {
-		background-image:url(../../images/block-design.jpg);
+		background-image:url('../images/block-design.jpg');
 		background-size:cover;
 		background-position:50% 70%;
 	}
 	.block-consulting {
-		background-image:url(../../images/block-consulting.jpg);
+		background-image:url('../images/block-consulting.jpg');
 		background-size:cover;
 		background-position:center;
 	}
 	.block-training {
-		background-image:url(../../images/block-training.jpg);
+		background-image:url('../images/block-training.jpg');
 		background-size:cover;
 		background-position:center;
 	}
 	.block-analysis {
-		background-image:url(../../images/block-analysis.jpg);
+		background-image:url('../images/block-analysis.jpg');
 		background-size:cover;
 		background-position:center;
 	}
