--- a/app/less/pages/showcase/showcase-header.less
+++ b/app/less/pages/showcase/showcase-header.less
@@ -1,6 +1,6 @@
 header.showcase-header {
 	z-index:-1;
-	background:url(../../images/pencils.jpg);
+	background:url('../images/pencils.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
